--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -22,8 +22,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_background" />
+                android:scaleType="centerCrop" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -36,7 +35,9 @@
                     android:layout_above="@id/editPais"
                     android:layout_alignParentStart="true"
                     android:layout_margin="8dp"
-                    android:hint="Ciudad" />
+                    android:background="#50000000"
+                    android:hint="Ciudad"
+                    android:textColor="@android:color/white" />
 
                 <EditText
                     android:id="@+id/editPais"
@@ -48,7 +49,9 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="24dp"
-                    android:hint="País" />
+                    android:background="#50000000"
+                    android:hint="País"
+                    android:textColor="@android:color/white" />
             </RelativeLayout>
 
         </FrameLayout>
@@ -57,25 +60,25 @@
             android:id="@+id/textViewLugares"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             android:text="Lugares"
             android:textAlignment="center"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            android:layout_margin="16dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/fragment_container_lugares"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewA"
-            app:layout_constraintBottom_toTopOf="@id/fragment_container_lugares"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/viewA" />
 
 
         <FrameLayout
-            android:layout_margin="24dp"
             android:id="@+id/fragment_container_lugares"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
