--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:background="@android:color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -64,14 +65,14 @@
             android:text="Lugares"
             android:textAlignment="center"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            app:layout_constraintBottom_toTopOf="@id/fragment_container_lugares"
+            app:layout_constraintBottom_toTopOf="@id/recycler_lugares"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/viewA" />
 
 
-        <FrameLayout
-            android:id="@+id/fragment_container_lugares"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_lugares"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="24dp"
