--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editUsuario"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="id.gallego16@iesdoctorbalmis.com"
-        android:inputType="text"
-        android:hint="Usuario"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintWidth_percent="0.7">
 
-    <EditText
-        android:id="@+id/editPass"
+        <com.google.android.material.textfield.TextInputEditText
+            android:text="id.gallego16@iesdoctorbalmis.com"
+            android:id="@+id/editUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editPassLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="admin123."
         android:layout_margin="8dp"
-        android:hint="Contraseña"
-        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintWidth_percent="0.7">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="admin123."
+            android:hint="Contraseña"
+            android:inputType="textPassword" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/buttonCrear"
@@ -38,8 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:text="Crear"
-        app:layout_constraintStart_toStartOf="@+id/editPass"
-        app:layout_constraintTop_toBottomOf="@+id/editPass" />
+        app:layout_constraintStart_toStartOf="@+id/editPassLayout"
+        app:layout_constraintTop_toBottomOf="@+id/editPassLayout" />
 
     <Button
         android:id="@+id/buttonEntrar"
@@ -47,8 +60,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:text="Entrar"
-        app:layout_constraintEnd_toEndOf="@+id/editPass"
-        app:layout_constraintTop_toBottomOf="@+id/editPass" />
+        app:layout_constraintEnd_toEndOf="@+id/editPassLayout"
+        app:layout_constraintTop_toBottomOf="@+id/editPassLayout" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
