--- a/app/src/main/res/layout/fragment_recycler.xml
+++ b/app/src/main/res/layout/fragment_recycler.xml
@@ -14,8 +14,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:id="@+id/fab"
+        android:id="@+id/fabA"
         android:layout_margin="16dp"
         android:src="@android:drawable/ic_input_add"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:id="@+id/fabB"
+        android:layout_margin="16dp"
+        android:src="@drawable/baseline_refresh_24"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:id="@+id/fab"
+        android:layout_margin="16dp"
+        android:src="@android:drawable/arrow_up_float"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
