--- a/app/src/main/res/layout/edit_lugar_fragment.xml
+++ b/app/src/main/res/layout/edit_lugar_fragment.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     android:animateLayoutChanges="true"
+    android:background="@android:color/white"
     android:clickable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,30 +60,15 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintTop_toBottomOf="@+id/editDescripcion" />
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/frameRecycler"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textoLugaresDestacados"
-            app:layout_constraintStart_toStartOf="parent">
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_lugares_fotos"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabLugaresDestacados"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_margin="16dp"
-                android:src="@android:drawable/ic_input_add" />
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textoLugaresDestacados" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -96,4 +81,28 @@
         android:text="Aceptar"
         app:layout_anchor="@id/imageViewLugar"
         app:layout_anchorGravity="bottom|right|end" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:id="@+id/fabA"
+        android:layout_margin="16dp"
+        android:src="@android:drawable/ic_input_add"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:id="@+id/fabB"
+        android:layout_margin="16dp"
+        android:src="@drawable/baseline_refresh_24"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:id="@+id/fab"
+        android:layout_margin="16dp"
+        android:src="@android:drawable/arrow_up_float"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
